--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "nodemon": "^3.0.1"
   }
 }
